<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/TextViewDeviceMyRouterName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/imageView1"
        android:text="jingguan" />

    <Button
        android:id="@+id/ButtonDeviceMyLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextViewDeviceMyRouterName"
        android:layout_below="@+id/TextViewDeviceMyRouterName"
        android:minHeight="20dip"
        android:minWidth="40dip"
        android:text="@string/not_login" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView1"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/TextViewDeviceCheckList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_list_check" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearLayout1"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/TextViewMyRouter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_my_router" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearLayout2"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/TextView_RateControl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_speed_control" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearLayout3"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/TextView_ChildLock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_child_lock" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearLayout4"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/TextView_FileShare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_file_share" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/imageButton6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/TextViewDeviceMyRouterName"
        android:layout_marginRight="14dp"
        android:contentDescription="@string/TODO"
        android:src="@drawable/window" />

    <ImageButton
        android:id="@+id/ImageButtonDeviceCheckList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/linearLayout1"
        android:layout_alignLeft="@+id/imageButton6"
        android:contentDescription="@string/TODO"
        android:src="@drawable/window" />

    <ImageButton
        android:id="@+id/ImageButtonMyRouter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/linearLayout2"
        android:layout_alignLeft="@+id/ImageButtonDeviceCheckList"
        android:contentDescription="@string/TODO"
        android:src="@drawable/window" />

    <ImageButton
        android:id="@+id/ImageButtonRateControl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/linearLayout3"
        android:layout_alignLeft="@+id/ImageButtonMyRouter"
        android:contentDescription="@string/TODO"
        android:src="@drawable/window" />

    <ImageButton
        android:id="@+id/ImageButtonChildLock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/linearLayout4"
        android:layout_alignLeft="@+id/ImageButtonRateControl"
        android:contentDescription="@string/TODO"
        android:src="@drawable/window" />

    <ImageButton
        android:id="@+id/ImageButtonFileShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/linearLayout5"
        android:layout_alignLeft="@+id/ImageButtonRateControl"
        android:contentDescription="@string/TODO"
        android:src="@drawable/window" />

</RelativeLayout>